# exerciseProject

./: CMakeLists.txt  README.md  main.cpp
header/: a.h  b.h
source/: a.cpp  b.cpp
